# roxtract

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
.cargo/: config.toml
crates/roxtract-bin/: Cargo.toml
src/: bintrinsics.rs  heuristics.rs  lib.rs
