[package]
name = "roxtract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc-any = "2.4.3"
sptr = "0.3.2"

gumdrop = { version = "0.8.1", optional = true }
gumdrop_derive = { version = "0.8.1", optional = true }

[dev-dependencies]
assert_hex = "0.4.1"

[features]
cli = ["gumdrop", "gumdrop_derive"]

[[bin]]
name = "roxtract"
required-features = ["cli"]
