[package]
name = "roxtract"
version.workspace = true
edition.workspace = true

[workspace]
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"


[workspace.dependencies]
crc-any = "2.5"

[dependencies]
crc-any = { workspace = true }

[dev-dependencies]
sptr = "0.3.2"
assert_hex = "0.4.1"
